[package]
name = "matlab-parser"
version = "0.1.1"
edition = "2021"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
description = "Topology optimization in pure Rust, based on 99 lines of MATLAB"
readme = "README.md"
#repository = "https://github.com/cmccomb/topopt-rs"
#homepage = "https://github.com/cmccomb/topopt-rs"
#documentation = "https://docs.rs/topopt"
#license = "MIT"
#keywords = ["optimization", "engineering", "topopt"]
#categories = ["science", "simulation", "aerospace::simulation"]

[dependencies]
antlr-rust = "0.2.2"